# axel

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTION.MD  README.MD  SECURITY.md  SUPPORT.md  axl_test  axylith  changelog.md  funding.json
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  questions.md
.github/workflows/: _setup.yml  build-matrix.yml  build.yml  ci.yml  clang-tidy.yml  codeql.yml  cppcheck.yml  release.yml  sanitizers.yml
assets/: jetbrains_mono.json
shaders/: solid.vert  text.frag  text.vert
src/: atlas.cpp  atlas.h  editor.cpp  editor.h  font.cpp  font.h  main.cpp  metrics.h  monitor.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  solid.cpp  solid.h  swapchain.cpp  swapchain.h  text.cpp  text.h  types.h  vulkan_init.cpp  vulkan_init.h  window.cpp  window.h
tests/: axl_test.cpp
